sort trip by start_date returns array
